@@ -16,7 +16,6 @@ package org.shanoir.ng.importer.dcm2nii;
 
 import java.io.BufferedReader;
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.FilenameFilter;
 import java.io.IOException;
@@ -28,8 +27,10 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map.Entry;
 import java.util.Set;
 
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
 import org.shanoir.ng.importer.model.Dataset;
 import org.shanoir.ng.importer.model.DatasetFile;
@@ -68,47 +69,80 @@ import org.springframework.stereotype.Service;
 @Service
 public class DatasetsCreatorAndNIfTIConverterService {
 
+	private static final String BVAL = ".bval";
+
+	private static final String BVEC = ".bvec";
+
+	private static final String DATASET_STR = "dataset";
+
 	private static final Logger LOG = LoggerFactory.getLogger(DatasetsCreatorAndNIfTIConverterService.class);
 
 	private static final String DOUBLE_EQUAL = "==";
 
 	private static final String SEMI_COLON = ";";
-	
+
 	private static final String SERIES = "SERIES";
-	
-	private static final String DATASET = "dataset";
-	
+
 	@Autowired
 	private NIfTIConverterRepository niftiConverterRepository;
-	
+
 	@Autowired
 	private ShanoirExec shanoirExec;
+<<<<<<< HEAD
 	
 	@Value("${shanoir.import.series.seriesProperties}")
 	private String seriesProperties;
+=======
+
+	@Value("${shanoir.import.series.donotseparatedatasetsinserie}")
+	private String doNotSeparateDatasetsInSerie;
+>>>>>>> refs/remotes/origin/develop
 
 	@Value("${shanoir.conversion.converters.convertwithclidcm}")
 	private String convertWithClidcm;
+<<<<<<< HEAD
 	
 	@Value("${shanoir.conversion.converters.path}")
 	private String convertersPath;
 	
+=======
+
+	@Value("${shanoir.conversion.dcm2nii.converters.convertas4d}")
+	private String convertAs4D;
+
+	@Value("${shanoir.conversion.dcm2nii.converters.path.linux}")
+	private String convertersPathLinux;
+
+	@Value("${shanoir.conversion.dcm2nii.converters.path.windows}")
+	private String convertersPathWindows;
+
+	@Value("${shanoir.conversion.dcm2nii.converters.clidcm.path.linux}")
+	private String clidcmPathLinux;
+
+	@Value("${shanoir.conversion.dcm2nii.converters.clidcm.path.windows}")
+	private String clidcmPathWindows;
+
+>>>>>>> refs/remotes/origin/develop
 	/** Logs of the conversion. */
 	private String conversionLogs;
-	
+
 	/** Output files mapped by series UID. */
 	private HashMap<String, List<String>> outputFiles = new HashMap<>();
+<<<<<<< HEAD
 	
+=======
+
+>>>>>>> refs/remotes/origin/develop
 	@PreAuthorize("hasAnyRole('ADMIN', 'EXPERT', 'USER')")
 	public NIfTIConverter findById(Long id) {
 		return niftiConverterRepository.findOne(id);
 	}
-	
+
 	@PreAuthorize("hasAnyRole('ADMIN', 'EXPERT', 'USER')")
 	public List<NIfTIConverter> findAll() {
 		return niftiConverterRepository.findAll();
 	}
-	
+
 	@PreAuthorize("hasAnyRole('ADMIN', 'EXPERT', 'USER')")
 	public void createDatasetsAndRunConversion(Patient patient, File workFolder, Long converterId) throws ShanoirException {
 		File seriesFolderFile = new File(workFolder.getAbsolutePath() + File.separator + SERIES);
@@ -122,7 +156,6 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		for (Iterator<Study> studiesIt = studies.iterator(); studiesIt.hasNext();) {
 			Study study = studiesIt.next();
 			List<Serie> series = study.getSeries();
-			int numberOfSeries = series.size();
 			for (Iterator<Serie> seriesIt = series.iterator(); seriesIt.hasNext();) {
 				Serie serie = seriesIt.next();
 				if (serie.getSelected() != null && serie.getSelected()) {
@@ -134,7 +167,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 						// otherwise just do not separate the series and keep all images for one nii conversion
 						serie.setDatasets(new ArrayList<Dataset>());
 						constructDicom(serieIDFolderFile, serie, serieIdentifiedForNotSeparating);
-						constructNifti(serieIDFolderFile, serie, numberOfSeries, converterId);
+						constructNifti(serieIDFolderFile, serie, converterId);
 					} catch (NoSuchFieldException | SecurityException e) {
 						LOG.error(e.getMessage());
 					}
@@ -145,134 +178,129 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			}
 		}
 	}
-	
-    /**
+
+	/**
 	 *
 	 * Create the nifti dataset expression
 	 * 
 	 **/
 	private ExpressionFormat generateNiftiDatasetExpression(Dataset dataset,Serie serie) {
-        LOG.debug("Create the nifti dataset expressions for dataset : " + dataset.getName() + " in serie " + serie.getSequenceName());
-        final ExpressionFormat datasetExpressionNifti = new ExpressionFormat();
-        datasetExpressionNifti.setType("nii");
-        return datasetExpressionNifti;
+		LOG.debug("Create the nifti dataset expressions for dataset : {} in serie {}", dataset.getName(), serie.getSequenceName());
+		final ExpressionFormat datasetExpressionNifti = new ExpressionFormat();
+		datasetExpressionNifti.setType("nii");
+		return datasetExpressionNifti;
 	}
 
-    /**
+	/**
 	 *
 	 * Create the nifti dataset expressions files
 	 * 
 	 **/
 	private void generateNiftiDatasetFiles(ExpressionFormat datasetExpressionFormat, Dataset dataset,List<File> niftiFileList) {
-        if (niftiFileList != null  && !niftiFileList.isEmpty()) {
-	        for (final File niftiFile : niftiFileList) {
-	            LOG.debug("create DatasetFile : processing the file " + niftiFile.getName());
-	            final DatasetFile niftiDatasetFile = new DatasetFile();
-	            niftiDatasetFile.setPath(niftiFile.toURI().toString().replaceAll(" ", "%20"));
-	            datasetExpressionFormat.getDatasetFiles().add(niftiDatasetFile);
-	        }
-	
-	        // if necessary, rename the bvec and bval files (for DTI)
-	        renameBvecBval(datasetExpressionFormat);
-	
-	        /*
-	         * if there was some DTI images, then we can now use the
-	         * bvec and bval files to create the diffusion gradients and
-	         * add them to the MR Protocol. Indeed, it is more likely to
-	         * do so now because extracting the diffusion gradients from
-	         * the dicom files is tricky.
-	         */
-	        extractDiffusionGradients(dataset,datasetExpressionFormat);
-        }
-    }
+		if (niftiFileList != null  && !niftiFileList.isEmpty()) {
+			for (final File niftiFile : niftiFileList) {
+				LOG.debug("create DatasetFile : processing the file {}", niftiFile.getName());
+				final DatasetFile niftiDatasetFile = new DatasetFile();
+				niftiDatasetFile.setPath(niftiFile.toURI().toString().replaceAll(" ", "%20"));
+				datasetExpressionFormat.getDatasetFiles().add(niftiDatasetFile);
+			}
 
-	
+			// if necessary, rename the bvec and bval files (for DTI)
+			renameBvecBval(datasetExpressionFormat);
+
+			/*
+			 * if there was some DTI images, then we can now use the
+			 * bvec and bval files to create the diffusion gradients and
+			 * add them to the MR Protocol. Indeed, it is more likely to
+			 * do so now because extracting the diffusion gradients from
+			 * the dicom files is tricky.
+			 */
+			extractDiffusionGradients(dataset,datasetExpressionFormat);
+		}
+	}
+
+
 	/**
-     * Extract from the bvec and bval files the diffusion gradients and fullfill
-     * the mr protocol.
-     *
-     * @param mrProtocol
-     *            the mr protocol
-     * @param mrDataset
-     *            the mr dataset
-     * @param datasetExpressionNifti
-     *            the dataset expression nifti
-     */
-    private void extractDiffusionGradients(Dataset dataset, ExpressionFormat datasetExpressionNifti) {
-    	LOG.debug("extractDiffusionGradients : Begin");
-        if (datasetExpressionNifti != null) {
-            try {
-                boolean bvecOrBvalFound = false;
-                for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
-                    final File file = new File(new URI(datasetFile.getPath()));
-                    if (file.getName().endsWith(".bvec") || file.getName().endsWith(".bval")) {
-                        bvecOrBvalFound = true;
-                        break;
-                    }
-                }
+	 * Extract from the bvec and bval files the diffusion gradients and fullfill
+	 * the mr protocol.
+	 *
+	 * @param mrProtocol
+	 *            the mr protocol
+	 * @param mrDataset
+	 *            the mr dataset
+	 * @param datasetExpressionNifti
+	 *            the dataset expression nifti
+	 */
+	private void extractDiffusionGradients(Dataset dataset, ExpressionFormat datasetExpressionNifti) {
+		LOG.debug("extractDiffusionGradients : Begin");
+		if (datasetExpressionNifti != null) {
+			try {
+				boolean bvecOrBvalFound = false;
+				for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
+					final File file = new File(new URI(datasetFile.getPath()));
+					if (file.getName().endsWith(BVEC) || file.getName().endsWith(BVAL)) {
+						bvecOrBvalFound = true;
+						break;
+					}
+				}
 
-                if (bvecOrBvalFound) {
-                    String[] xValues = null;
-                    String[] yValues = null;
-                    String[] zValues = null;
-                    String[] bValues = null;
-                    for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
-                        final File file = new File(new URI(datasetFile.getPath()));
-                        if (file.getName().endsWith(".bvec")) {
-                            BufferedReader reader = new BufferedReader(new FileReader(file));
-                            String line = null;
-                            List<String> items = new ArrayList<String>();
-                            while ((line = reader.readLine()) != null) {
-                                items.add(line);
-                            }
-                            xValues = items.get(0).split("\\s");
-                            yValues = items.get(1).split("\\s");
-                            zValues = items.get(2).split("\\s");
-                            reader.close();
-                        }
-                        if (file.getName().endsWith(".bval")) {
-                            BufferedReader reader = new BufferedReader(new FileReader(file));
-                            String line = null;
-                            List<String> items = new ArrayList<String>();
-                            while ((line = reader.readLine()) != null) {
-                                items.add(line);
-                            }
-                            bValues = items.get(0).split("\\s");
-                            reader.close();
-                        }
-                    }
+				if (bvecOrBvalFound) {
+					String[] xValues = null;
+					String[] yValues = null;
+					String[] zValues = null;
+					String[] bValues = null;
+					for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
+						final File file = new File(new URI(datasetFile.getPath()));
+						if (file.getName().endsWith(BVEC)) {
+							try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
+								String line = null;
+								List<String> items = new ArrayList<>();
+								while ((line = reader.readLine()) != null) {
+									items.add(line);
+								}
+								xValues = items.get(0).split("\\s");
+								yValues = items.get(1).split("\\s");
+								zValues = items.get(2).split("\\s");
+							}
+						}
+						if (file.getName().endsWith(BVAL)) {
+							try(BufferedReader reader = new BufferedReader(new FileReader(file))) {
+								String line = null;
+								List<String> items = new ArrayList<>();
+								while ((line = reader.readLine()) != null) {
+									items.add(line);
+								}
+								bValues = items.get(0).split("\\s");
+							}
+						}
+					}
 
-                    if (xValues != null && yValues != null && zValues != null && bValues != null) {
-                        if (xValues.length == yValues.length && yValues.length == zValues.length
-                                && zValues.length == bValues.length) {
-                            for (int i = 0; i < xValues.length; i++) {
-                                final DiffusionGradient diffusionGradient = new DiffusionGradient();
-                                diffusionGradient.setDiffusionGradientBValue(Double.valueOf(bValues[i]));
-                                diffusionGradient.setDiffusionGradientOrientationX(Double.valueOf(xValues[i]));
-                                diffusionGradient.setDiffusionGradientOrientationY(Double.valueOf(yValues[i]));
-                                diffusionGradient.setDiffusionGradientOrientationZ(Double.valueOf(zValues[i]));
-                                dataset.getDiffusionGradients().add(i, diffusionGradient);
-                                LOG.debug("extractDiffusionGradients : adding diffusion gradient " + diffusionGradient
-                                        + " dataset " + dataset.getName());
-                            }
-                        } else {
-                        	LOG.error("extractDiffusionGradients : The matrices doesn't have the same size!!");
-                        }
-                    } else {
-                    	LOG.error("extractDiffusionGradients : error occured when getting the b-vector and b-values");
-                    }
-                }
-            } catch (final URISyntaxException exc) {
-            	LOG.error("extractDiffusionGradients : ", exc);
-            } catch (final FileNotFoundException exc) {
-            	LOG.error("extractDiffusionGradients : ", exc);
-            } catch (final IOException exc) {
-            	LOG.error("extractDiffusionGradients : ", exc);
-            }
-        }
-        LOG.debug("extractDiffusionGradients : End");
-    }
-	
+					if (xValues != null && yValues != null && zValues != null && bValues != null) {
+						if (xValues.length == yValues.length && yValues.length == zValues.length
+								&& zValues.length == bValues.length) {
+							for (int i = 0; i < xValues.length; i++) {
+								final DiffusionGradient diffusionGradient = new DiffusionGradient();
+								diffusionGradient.setDiffusionGradientBValue(Double.valueOf(bValues[i]));
+								diffusionGradient.setDiffusionGradientOrientationX(Double.valueOf(xValues[i]));
+								diffusionGradient.setDiffusionGradientOrientationY(Double.valueOf(yValues[i]));
+								diffusionGradient.setDiffusionGradientOrientationZ(Double.valueOf(zValues[i]));
+								dataset.getDiffusionGradients().add(i, diffusionGradient);
+								LOG.debug("extractDiffusionGradients : adding diffusion gradient {} dataset {}", diffusionGradient,  dataset.getName());
+							}
+						} else {
+							LOG.error("extractDiffusionGradients : The matrices doesn't have the same size!!");
+						}
+					} else {
+						LOG.error("extractDiffusionGradients : error occured when getting the b-vector and b-values");
+					}
+				}
+			} catch (final URISyntaxException | IOException exc) {
+				LOG.error("extractDiffusionGradients : {}", exc);
+			}
+		}
+		LOG.debug("extractDiffusionGradients : End");
+	}
+
 	/**
 	 * Execute the Nifti conversion
 	 *
@@ -289,7 +317,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		if (converter != null && converter.isMcverter()) {
 			is4D = true;
 			conversionLogs += shanoirExec.mcverterExec(inputFolder, converterPath, outputFolder, is4D);
-		// Clidcm
+			// Clidcm
 		} else if (converter != null && converter.isClidcm()) {
 			try {
 				conversionLogs += shanoirExec.clidcmExec(inputFolder, converterPath, outputFolder);
@@ -302,17 +330,16 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			 * dcm2nii .
 			 */
 			createBvecAndBval(outputFolder);
-		// Dicom2Nifti
+			// Dicom2Nifti
 		} else if (converter != null && converter.isDicom2Nifti()) {
-			is4D = true;
-			conversionLogs += shanoirExec.dicom2niftiExec(inputFolder, converterPath, outputFolder, is4D);
-		// dcm2nii
+			conversionLogs += shanoirExec.dicom2niftiExec(inputFolder, converterPath, outputFolder);
+			// dcm2nii
 		} else {
 			is4D = true;
 			conversionLogs += shanoirExec.dcm2niiExec(inputFolder, converterPath, outputFolder, is4D);
 		}
 	}
-	
+
 	/**
 	 * Search for a '.prop' file. If found, then creates a '.bvec' and a '.bval'
 	 * file from the '.prop' file.
@@ -320,21 +347,20 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * @param path
 	 */
 	private List<File> createBvecAndBval(final String path) {
-		LOG.debug("createBvecAndBval : Begin, params : path=" + path);
-		List<File> bvecAndBval = new ArrayList<File>();
+		LOG.debug("createBvecAndBval : Begin, params : path={}", path);
+		List<File> bvecAndBval = new ArrayList<>();
 		final FilenameFilter filter = new FilenameFilter() {
 			@Override
 			public boolean accept(final File dir, final String name) {
-				final boolean accept = FilenameUtils.isExtension(name, new String[] { "prop", "PROP" });
-				return accept;
+				return FilenameUtils.isExtension(name, new String[] { "prop", "PROP" });
 			}
 		};
 		final String[] propFiles = new File(path).list(filter);
 		if (propFiles != null && propFiles.length != 0) {
 			for (final String propFile : propFiles) {
-				LOG.debug("createBvecAndBval : '.prop' file found : " + propFile);
+				LOG.debug("createBvecAndBval : '.prop' file found : {}", propFile);
 				final List<File> thisList = DiffusionUtil.propToBvecBval(new File(path, propFile), new File(path));
-				LOG.debug("createBvecAndBval : bvec and bvals created : " + thisList);
+				LOG.debug("createBvecAndBval : bvec and bvals created : {}", thisList);
 				bvecAndBval.addAll(thisList);
 			}
 		}
@@ -344,72 +370,72 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		LOG.debug("createBvecAndBval : end");
 		return bvecAndBval;
 	}
-	
-	/**
-     * Sometimes, dcm2nii creates files named '.bvec' and '.bval'. This methods
-     * renames them with the name of the dataset.
-     *
-     * @param datasetExpressionNifti
-     *            the dataset expression nifti
-     */
-    private void renameBvecBval(final ExpressionFormat datasetExpressionNifti) {
-        LOG.debug("renameBvecBval : Begin");
-        if (datasetExpressionNifti != null) {
-            try {
-                boolean toBeRenamed = false;
-                for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
-                    final File file = new File(new URI(datasetFile.getPath()));
-                    if (".bvec".equalsIgnoreCase(file.getName()) || ".bval".equalsIgnoreCase(file.getName())) {
-                        toBeRenamed = true;
-                        break;
-                    }
-                }
-                if (toBeRenamed) {
-                    LOG.debug("renameBvecBval : .bvec and .bval files to rename");
-                    String name = null;
-                    for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
-                        final File file = new File(new URI(datasetFile.getPath()));
-                        if (file.getName().endsWith(".nii")) {
-                            name = file.getName().substring(0, file.getName().lastIndexOf(".nii"));
-                        }
-                        if (file.getName().endsWith(".nii.gz")) {
-                            name = file.getName().substring(0, file.getName().lastIndexOf(".nii.gz"));
-                        }
-                    }
 
-                    if (name != null) {
-                        for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
-                            final File file = new File(new URI(datasetFile.getPath()));
-                            if (".bvec".equalsIgnoreCase(file.getName())) {
-                                final String newName = name + ".bvec";
-                                final String newPath = datasetFile.getPath().replaceAll(".bvec", newName);
-                                file.renameTo(new File(new URI(newPath)));
-                                datasetFile.setPath(newPath);
-                                LOG.debug("renameBvecBval : .bvec renamed to " + newName);
-                            } else if (".bval".equalsIgnoreCase(file.getName())) {
-                                final String newName = name + ".bval";
-                                final String newPath = datasetFile.getPath().replaceAll(".bval", newName);
-                                file.renameTo(new File(new URI(newPath)));
-                                datasetFile.setPath(newPath);
-                                LOG.debug("renameBvecBval : .bval renamed to " + newName);
-                            }
-                        }
-                    }
-                } else {
-                	LOG.debug("renameBvecBval : no file to rename");
-                }
-            } catch (final URISyntaxException exc) {
-            	LOG.error("renameBvecBval : ", exc);
-            }
-        }
-        LOG.debug("renameBvecBval : End");
-    }
-	
+	/**
+	 * Sometimes, dcm2nii creates files named '.bvec' and '.bval'. This methods
+	 * renames them with the name of the dataset.
+	 *
+	 * @param datasetExpressionNifti
+	 *            the dataset expression nifti
+	 */
+	private void renameBvecBval(final ExpressionFormat datasetExpressionNifti) {
+		LOG.debug("renameBvecBval : Begin");
+		if (datasetExpressionNifti != null) {
+			try {
+				boolean toBeRenamed = false;
+				for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
+					final File file = new File(new URI(datasetFile.getPath()));
+					if (BVEC.equalsIgnoreCase(file.getName()) || BVAL.equalsIgnoreCase(file.getName())) {
+						toBeRenamed = true;
+						break;
+					}
+				}
+				if (toBeRenamed) {
+					LOG.debug("renameBvecBval : .bvec and .bval files to rename");
+					String name = null;
+					for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
+						final File file = new File(new URI(datasetFile.getPath()));
+						if (file.getName().endsWith(".nii")) {
+							name = file.getName().substring(0, file.getName().lastIndexOf(".nii"));
+						}
+						if (file.getName().endsWith(".nii.gz")) {
+							name = file.getName().substring(0, file.getName().lastIndexOf(".nii.gz"));
+						}
+					}
+
+					if (name != null) {
+						for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
+							final File file = new File(new URI(datasetFile.getPath()));
+							if (BVEC.equalsIgnoreCase(file.getName())) {
+								final String newName = name + BVEC;
+								final String newPath = datasetFile.getPath().replaceAll(BVEC, newName);
+								file.renameTo(new File(new URI(newPath)));
+								datasetFile.setPath(newPath);
+								LOG.debug("renameBvecBval : .bvec renamed to {}", newName);
+							} else if (BVAL.equalsIgnoreCase(file.getName())) {
+								final String newName = name + BVAL;
+								final String newPath = datasetFile.getPath().replaceAll(BVAL, newName);
+								file.renameTo(new File(new URI(newPath)));
+								datasetFile.setPath(newPath);
+								LOG.debug("renameBvecBval : .bval renamed to {}", newName);
+							}
+						}
+					}
+				} else {
+					LOG.debug("renameBvecBval : no file to rename");
+				}
+			} catch (final URISyntaxException exc) {
+				LOG.error("renameBvecBval : ", exc);
+			}
+		}
+		LOG.debug("renameBvecBval : End");
+	}
+
 	/**
 	 * Remove unused files that are created during the conversion process.
 	 */
 	private void removeUnusedFiles() {
-		final List<File> toBeRemovedList = new ArrayList<File>();
+		final List<File> toBeRemovedList = new ArrayList<>();
 		for (final List<String> listPath : outputFiles.values()) {
 			for (final String path : listPath) {
 				File file = new File(path);
@@ -423,7 +449,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			outputFiles.remove(toBeRemovedFile);
 			boolean success = toBeRemovedFile.delete();
 			if (!success) {
-				LOG.error("removeUnusedFiles : error while deleting " + toBeRemovedFile);
+				LOG.error("removeUnusedFiles : error while deleting {}", toBeRemovedFile);
 			}
 		}
 	}
@@ -434,12 +460,12 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * @throws SecurityException
 	 * @throws NoSuchFieldException
 	 */
-	private boolean checkSerieForPropertiesString(final Serie serie, final String propertiesString) throws NoSuchFieldException, SecurityException {
+	private boolean checkSerieForPropertiesString(final Serie serie, final String propertiesString) throws NoSuchFieldException {
 		final String[] itemArray = propertiesString.split(SEMI_COLON);
 		for (final String item : itemArray) {
 			final String tag = item.split(DOUBLE_EQUAL)[0];
 			final String value = item.split(DOUBLE_EQUAL)[1];
-			LOG.debug("checkDicomFromProperties : tag=" + tag + ", value=" + value);
+			LOG.debug("checkDicomFromProperties : tag={}, value={}", tag, value);
 			try {
 				Class<? extends Serie> aClass = serie.getClass();
 				Field field = aClass.getDeclaredField(tag);
@@ -455,8 +481,8 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		}
 		return false;
 	}
-	
-	
+
+
 	/**
 	 * This method does the actual conversion on calling the converter, either on the level
 	 * of the serie folder or on the level of each dataset folder inside the serie folder.
@@ -478,8 +504,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * @throws SecurityException
 	 * @throws NoSuchFieldException
 	 */
-	private NIfTIConverter datasetToNiftiConversionLauncher(Dataset dataset, File directory, Serie serie, Long converterId, boolean isConvertAs4D, boolean isConvertWithClidcm) throws NoSuchFieldException, SecurityException {
+	private NIfTIConverter datasetToNiftiConversionLauncher(Dataset dataset, File directory, boolean isConvertAs4D) {
 
+<<<<<<< HEAD
 				// search for the existing files in the destination folder
 				
 				LOG.info("convertToNifti : create nifti files for the dataset : " + dataset.getName());
@@ -493,16 +520,33 @@ public class DatasetsCreatorAndNIfTIConverterService {
 				convertToNiftiExec(converter, directory.getPath(), directory.getPath(), isConvertAs4D);
 				LOG.info("conversionLogs : " + conversionLogs);
 				return converter;
+=======
+		// search for the existing files in the destination folder
+
+		LOG.info("convertToNifti : create nifti files for the dataset : {}", dataset.getName());
+		if (conversionLogs != null && !"".equals(conversionLogs)) {
+			conversionLogs += "\n";
+		} else {
+			conversionLogs = "";
+		}
+
+		// TODO ATO : Fix this once nifti conversion process is defined.
+
+		NIfTIConverter converter = findById(5L);
+		convertToNiftiExec(converter, directory.getPath(), directory.getPath(), isConvertAs4D);
+		LOG.info("conversionLogs : {}", conversionLogs);
+		return converter;
+>>>>>>> refs/remotes/origin/develop
 
 	}
-	
-	
+
+
 	/**
 	 * This method is needed to identify generated nifti files in the middle of dcm files.
 	 * 
 	 * @return List of nifti files
 	 */
-	
+
 	private List<File> niftiFileSorting(List<File> existingFiles, File directory, File serieIDFolderFile) {
 		// If one of the output files is a prop file, there has been an error
 		List<File> niftiFileResult = null;
@@ -512,17 +556,17 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			if (!containsPropFile(niiFiles)) {
 				for (File niiFile : niiFiles) {
 					outputFiles.get(serieIDFolderFile.getName()).add(niiFile.getAbsolutePath());
-					LOG.info("Path niiFile : " + niiFile.getAbsolutePath());
+					LOG.info("Path niiFile : {}", niiFile.getAbsolutePath());
 				}
 			}
 		} else {
-			List<String> niiPathList = new ArrayList<String>();
+			List<String> niiPathList = new ArrayList<>();
 			if (!containsPropFile(diff(existingFiles, directory.getPath()))) {
 				List<File>  niiFileList = diff(existingFiles, directory.getPath());
 				niftiFileResult = niiFileList;
 				for (File niiFile : niiFileList) {
 					niiPathList.add(niiFile.getAbsolutePath());
-					LOG.info("Path niiFile : " + niiFile.getAbsolutePath());
+					LOG.info("Path niiFile : {}", niiFile.getAbsolutePath());
 				}
 				outputFiles.put(serieIDFolderFile.getName(), niiPathList);
 			}
@@ -531,7 +575,42 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		removeUnusedFiles();
 		return niftiFileResult;
 	}
-	
+
+	/**
+	 * adapt to generated folders by dicom2nifti converter
+	 * 
+	 * @param converter
+	 * @param niiFiles
+	 * @param directory
+	 * @return
+	 */
+	private List<File> niftiFileSortingDicom2Nifti(NIfTIConverter converter, List<File> niiFiles, File directory) {
+		// Have to adapt to generated folders by dicom2nifti converter
+		if (converter.isDicom2Nifti()) {
+			List<File> existingFiles = Arrays.asList(directory.listFiles());
+			// copy all files into the directory
+			for (File niiFile : niiFiles) {
+				ImportUtils.copyAllFiles(niiFile, directory);
+			}
+			// delete folder hierarchy created by dicomifier
+			for (File niiFile : niiFiles) {
+				try {
+					if (niiFile.isDirectory()) {
+						FileUtils.deleteDirectory(niiFile);
+					} else {
+						niiFile.delete();
+					}
+				} catch (Exception e) {
+					LOG.error("Error while deleting dicom2nifti generated folder {}", e.getMessage());
+				}
+			}
+			// nii files are the diff
+			niiFiles = diff(existingFiles, directory.getPath());
+		}
+		return niiFiles;
+	}
+
+
 	/**
 	 * This method generates the nifti files of serie  in proper datasets for an entire serie.
 	 * It also constructs the associated Nifti ExpressionFormat and DatasetFiles within the Dataset object.
@@ -543,10 +622,10 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * @param convertedId
 	 * 
 	 */
-	private void constructNifti(File serieIDFolderFile, final Serie serie, int numberOfSeries, Long converterId) {
+	private void constructNifti(File serieIDFolderFile, final Serie serie, Long converterId) {
 
-	LOG.debug("convertToNifti : create nifti files for the serie : " + serieIDFolderFile.getAbsolutePath());
-		
+		LOG.debug("convertToNifti : create nifti files for the serie : {}", serieIDFolderFile.getAbsolutePath());
+
 		if (serie != null) {
 			boolean isConvertAs4D=false;
 			boolean isConvertWithClidcm=false;
@@ -560,32 +639,32 @@ public class DatasetsCreatorAndNIfTIConverterService {
 				// Need to construct nifti files for each dataset in current serie
 				int index = 0;
 				for (Dataset dataset : serie.getDatasets()) {
-					File directory = new File(serieIDFolderFile + File.separator + "dataset" + index);
+					File directory = new File(serieIDFolderFile + File.separator + DATASET_STR + index);
 					if (directory.isDirectory()) {
-						LOG.info("convertToNifti : create nifti files for the dataset " + dataset.getName() + " in directory : " + directory.getName());
+						LOG.info("convertToNifti : create nifti files for the dataset {} in directory : {}", dataset.getName(), directory.getName());
 						final List<File> existingFiles = Arrays.asList(directory.listFiles());
 						NIfTIConverter converter = null;
 						try {
-							converter = datasetToNiftiConversionLauncher(dataset, directory, serie, converterId, isConvertAs4D, isConvertWithClidcm);
-						} catch (NoSuchFieldException | SecurityException e) {
+							converter = datasetToNiftiConversionLauncher(dataset, directory, isConvertAs4D);
+						} catch (SecurityException e) {
 							LOG.error(e.getMessage());
 						}
 						List<File> niftiGeneratedFiles = niftiFileSorting(existingFiles, directory, serieIDFolderFile);
 						constructNiftiExpressionAndDatasetFiles(converter, dataset, serie, niftiGeneratedFiles);
 						++index;
-						
+
 					}
 				}
 			} else if (serie.getDatasets().size() == 1) {
 				// Need to construct nifti files for only one dataset in current serie
 				Dataset dataset = serie.getDatasets().get(0);
 				if (serieIDFolderFile.isDirectory()) {
-					LOG.info("convertToNifti : create nifti files for the dataset " + dataset.getName() + " in directory : " + serieIDFolderFile.getName());
+					LOG.info("convertToNifti : create nifti files for the dataset {} in directory : {}", dataset.getName(), serieIDFolderFile.getName());
 					final List<File> existingFiles = Arrays.asList(serieIDFolderFile.listFiles());
 					NIfTIConverter converter = null;
 					try {
-						converter = datasetToNiftiConversionLauncher(dataset, serieIDFolderFile, serie, converterId, isConvertAs4D, isConvertWithClidcm);
-					} catch (NoSuchFieldException | SecurityException e) {
+						converter = datasetToNiftiConversionLauncher(dataset, serieIDFolderFile, isConvertAs4D);
+					} catch (SecurityException e) {
 						LOG.error(e.getMessage());
 					}
 					List<File> niftiGeneratedFiles = niftiFileSorting(existingFiles, serieIDFolderFile, serieIDFolderFile);
@@ -594,7 +673,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			}
 		}
 	}
-	
+
 	/**
 	 *  Build dataset Expresion and datasetFiles
 	 * 
@@ -610,8 +689,8 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		dataset.getExpressionFormats().add(expressionFormat);
 		generateNiftiDatasetFiles(expressionFormat, dataset, niftiGeneratedFiles);
 	}
-	
-	
+
+
 	/**
 	 * This method extract the dicom files in proper dataset(s) (in a serie).
 	 * It also constructs the associated ExpressionFormat and DatasetFiles within the Dataset object.
@@ -622,7 +701,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 */
 	private void constructDicom(final File serieIDFolderFile, final Serie serie, final boolean serieIdentifiedForNotSeparating) {
 		if (!serieIdentifiedForNotSeparating) {
-			final HashMap<SerieToDatasetsSeparator, Dataset> datasetMap = new HashMap<SerieToDatasetsSeparator, Dataset>();
+			final HashMap<SerieToDatasetsSeparator, Dataset> datasetMap = new HashMap<>();
 			for (Image image : serie.getImages()) {
 				final int acquisitionNumber = image.getAcquisitionNumber();
 				Set<EchoTime> echoTimes = image.getEchoTimes();
@@ -641,48 +720,52 @@ public class DatasetsCreatorAndNIfTIConverterService {
 				if (found) {
 					DatasetFile datasetFile = createDatasetFile(image);
 					datasetMap.get(seriesToDatasetsSeparator).getExpressionFormats().get(0).getDatasetFiles().add(datasetFile);
-					datasetMap.get(seriesToDatasetsSeparator).getFlipAngles().add(new Double(image.getFlipAngle()));
-					datasetMap.get(seriesToDatasetsSeparator).getRepetitionTimes().add(new Double(image.getRepetitionTime()));
-					datasetMap.get(seriesToDatasetsSeparator).getInversionTimes().add(new Double(image.getInversionTime()));
+					datasetMap.get(seriesToDatasetsSeparator).getFlipAngles().add(Double.valueOf(image.getFlipAngle()));
+					datasetMap.get(seriesToDatasetsSeparator).getRepetitionTimes().add(image.getRepetitionTime());
+					datasetMap.get(seriesToDatasetsSeparator).getInversionTimes().add(image.getInversionTime());
 					datasetMap.get(seriesToDatasetsSeparator).setEchoTimes(image.getEchoTimes());
-				// new dataset has to be created, new expression format and add image/datasetfile
+					// new dataset has to be created, new expression format and add image/datasetfile
 				} else {
 					Dataset dataset = new Dataset();
 					ExpressionFormat expressionFormat = new ExpressionFormat();
 					expressionFormat.setType("dcm");
 					dataset.getExpressionFormats().add(expressionFormat);
 					DatasetFile datasetFile = createDatasetFile(image);
-					dataset.getFlipAngles().add(new Double(image.getFlipAngle()));
-					dataset.getRepetitionTimes().add(new Double(image.getRepetitionTime()));
-					dataset.getInversionTimes().add(new Double(image.getInversionTime()));
+					dataset.getFlipAngles().add(Double.valueOf(image.getFlipAngle()));
+					dataset.getRepetitionTimes().add(image.getRepetitionTime());
+					dataset.getInversionTimes().add(image.getInversionTime());
 					dataset.setEchoTimes(image.getEchoTimes());
 					expressionFormat.getDatasetFiles().add(datasetFile);
 					datasetMap.put(seriesToDatasetsSeparator, dataset);
 					serie.getDatasets().add(dataset);
 				}
 			}
-		
+
 			boolean success = true;
 			// create a separate folder for each group of images
 			int index = 0;
-			for (final SerieToDatasetsSeparator datasets : datasetMap.keySet()) {
+			for (final Entry<SerieToDatasetsSeparator, Dataset> datasets : datasetMap.entrySet()) {
 				// create a folder
-				final File folder = new File(serieIDFolderFile.getAbsolutePath() + File.separator + DATASET + index);
+				final File folder = new File(serieIDFolderFile.getAbsolutePath() + File.separator + DATASET_STR + index);
 				success = folder.mkdirs();
 				if (!success) {
-					LOG.error("deleteFolder : the creation of " + folder + " failed");
+					LOG.error("deleteFolder : the creation of {} failed", folder);
 				}
 				// move the files into the folder
-				for (final DatasetFile datasetFile : datasetMap.get(datasets).getExpressionFormats().get(0).getDatasetFiles()) {
+				for (final DatasetFile datasetFile : datasets.getValue().getExpressionFormats().get(0).getDatasetFiles()) {
 					String path = datasetFile.getPath();
 					final File oldFile = new File(path);
 					if (oldFile.exists()) {
 						final File newFile = new File(folder, oldFile.getName());
 						success = oldFile.renameTo(newFile);
 						datasetFile.setPath(newFile.getAbsolutePath());
-						datasetMap.get(datasets).setName(serie.getSeriesDescription() + index);
+						datasets.getValue().setName(serie.getSeriesDescription() + index);
 						if (!success) {
+<<<<<<< HEAD
 							LOG.error("deleteFolder : moving of " + oldFile + " failed");
+=======
+							LOG.error("deleteFolder : moving of {} failed", oldFile);
+>>>>>>> refs/remotes/origin/develop
 						}
 					}
 				}
@@ -698,9 +781,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			expressionFormat.setType("dcm");
 			dataset.getExpressionFormats().add(expressionFormat);
 			for (Image image : serie.getImages()) {
-				dataset.getFlipAngles().add(new Double(image.getFlipAngle()));
-				dataset.getRepetitionTimes().add(new Double(image.getRepetitionTime()));
-				dataset.getInversionTimes().add(new Double(image.getInversionTime()));
+				dataset.getFlipAngles().add(Double.valueOf(image.getFlipAngle()));
+				dataset.getRepetitionTimes().add(image.getRepetitionTime());
+				dataset.getInversionTimes().add(image.getInversionTime());
 				dataset.setEchoTimes(image.getEchoTimes());
 				DatasetFile datasetFile = createDatasetFile(image);
 				expressionFormat.getDatasetFiles().add(datasetFile);
@@ -708,7 +791,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			serie.getDatasets().add(dataset);
 		}
 	}
-	
+
 
 	/**
 	 * @param image
@@ -718,11 +801,10 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		DatasetFile datasetFile = new DatasetFile();
 		datasetFile.setPath(image.getPath());
 		datasetFile.setAcquisitionNumber(image.getAcquisitionNumber());
-//		datasetFile.setEchoTime(image.getEchoTimes());
 		datasetFile.setImageOrientationPatient(image.getImageOrientationPatient());
 		return datasetFile;
 	}
-	
+
 	/**
 	 * This method creates a folder for each serie and moves into it the files,
 	 * coming either from the PACS or from the zip upload directory.
@@ -737,12 +819,10 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		if(!serieIDFolderFile.exists()) {
 			serieIDFolderFile.mkdirs();
 		} else {
-			throw new ShanoirException("Error while creating serie id folder: folder already exists.");
+			throw new ShanoirException("Error while creating serie id folder: folder already exists. serieId: " + serieID);
 		}
 		List<Image> images = serie.getImages();
 		moveFiles(workFolder, serieIDFolderFile, images);
-//		List<Object> nonImages = serie.getNonImages();
-//		moveFiles(serieIDFolderFile, nonImages);
 		return serieIDFolderFile;
 	}
 
@@ -762,14 +842,14 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			if (oldFile.exists()) {
 				File newFile = new File(serieIDFolder.getAbsolutePath() + File.separator + oldFile.getName());
 				oldFile.renameTo(newFile);
-				LOG.debug("Moving file: " + oldFile.getAbsolutePath() + " to " + newFile.getAbsolutePath());
+				LOG.debug("Moving file: {} to {}", oldFile.getAbsolutePath(), newFile.getAbsolutePath());
 				image.setPath(newFile.getAbsolutePath());
 			} else {
 				throw new ShanoirException("Error while creating serie id folder: file to copy does not exist.");
 			}
 		}
 	}
-	
+
 	public static int[] convertIntegers(List<Integer> integers) {
 		int[] ret = new int[integers.size()];
 		for (int i = 0; i < ret.length; i++) {
@@ -777,7 +857,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		}
 		return ret;
 	}
-	
+
 	public static double[] convertDoubles(List<Double> doubles) {
 		double[] ret = new double[doubles.size()];
 		for (int i = 0; i < ret.length; i++) {
@@ -798,9 +878,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * @return the list< file>
 	 */
 	private List<File> diff(final List<File> existingFiles, final String destinationFolder) {
-		final List<File> resultList = new ArrayList<File>();
-		final List<File> outputFiles = Arrays.asList(new File(destinationFolder).listFiles());
-		for (final File file : outputFiles) {
+		final List<File> resultList = new ArrayList<>();
+		final List<File> outputFilesToDiff = Arrays.asList(new File(destinationFolder).listFiles());
+		for (final File file : outputFilesToDiff) {
 			if (!existingFiles.contains(file)) {
 				resultList.add(file);
 			}
@@ -822,5 +902,5 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		}
 		return false;
 	}
-	
+
 }
